# memoire-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
