[tool.poetry]
name = "memoire-ai"
version = "0.1.0"
description = ""
authors = ["Gwangseo Go <rufflain918@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.3.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic-settings = "^2.2.1"
openai = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
